Add colorscheme molokai

--- a/vimrc/vim_extend/dein.toml
+++ b/vimrc/vim_extend/dein.toml
@@ -8,6 +8,14 @@
 [[plugins]]
 repo = '~/.cache/dein/repos/github.com/Shougo/dein.vim'
 
+##################
+# colorschemes
+##################
+[[plugins]]
+repo = 'tomasr/molokai'
+hook_add = '''
+  let g:molokai_original = 1
+'''
 
 ##################
 # outline-desplay
