--- a/vimrc/vim_extend/dein.toml
+++ b/vimrc/vim_extend/dein.toml
@@ -65,6 +65,9 @@ hook_add = '''
   let g:ctrlp_map = ''
   nmap <Leader>p :CtrlP<CR>
   let g:ctrlp_show_hidden = 1
+  let g:ctrlp_by_filename = 1
+  let g:ctrlp_user_command = ['.git', 'cd %s && git ls-files -co --exclude-standard']
+'''
 '''
 
 [[plugins]]
