--- a/vimrc/vim_extend/dein.toml
+++ b/vimrc/vim_extend/dein.toml
@@ -68,6 +68,14 @@ hook_add = '''
   let g:ctrlp_by_filename = 1
   let g:ctrlp_user_command = ['.git', 'cd %s && git ls-files -co --exclude-standard']
 '''
+
+[[plugins]]
+repo = 'mileszs/ack.vim'
+if = '''executable('ag')'''
+hook_add = '''
+if executable('ag')
+  let g:ackprg = 'ag --vimgrep'
+endif
 '''
 
 [[plugins]]
