--- a/vimrc/vim_extend/dein.toml
+++ b/vimrc/vim_extend/dein.toml
@@ -264,7 +264,7 @@ on_ft = ['javascript', 'javascript.jsx']
 
 [[plugins]]
 repo = 'maxmellon/vim-jsx-pretty'
-on_ft = ['javascript', 'javascript.jsx']
+on_ft = ['javascript', 'javascript.jsx','javascript.tsx']
 
 [[plugins]]
 repo = 'ternjs/tern_for_vim'
@@ -272,6 +272,10 @@ on_ft = ['javascript', 'javascript.jsx']
 
 [[plugins]]
 repo = 'othree/yajs.vim'
+
+[[plugins]]
+repo = 'leafgarland/typescript-vim'
+on_ft = ['javascript', 'javascriptreact', 'javascript.jsx'  'javascript.tsx']
 
 
 ##################
