--- a/vimrc/vim_extend/dein.toml
+++ b/vimrc/vim_extend/dein.toml
@@ -247,7 +247,7 @@ repo = 'aklt/plantuml-syntax'
 ##################
 [[plugins]]
 repo = 'pangloss/vim-javascript'
-on_ft = ['javascript', 'javascript.jsx']
+on_ft = ['javascript', 'javascriptreact', 'javascript.jsx'  'javascript.tsx','typescript']
 
 [[plugins]]
 repo = 'othree/yajs.vim'
@@ -263,18 +263,19 @@ on_ft = ['javascript', 'javascriptreact', 'javascript.jsx'  'javascript.tsx','ty
 
 [[plugins]]
 repo = 'othree/html5.vim'
-on_ft = ['javascript', 'javascript.jsx']
+on_ft = ['javascript', 'javascriptreact', 'javascript.jsx'  'javascript.tsx','typescript']
 
 [[plugins]]
 repo = 'maxmellon/vim-jsx-pretty'
-on_ft = ['javascript', 'javascript.jsx','javascript.tsx','typescript']
+on_ft = ['javascript', 'javascriptreact', 'javascript.jsx'  'javascript.tsx','typescript']
 
 [[plugins]]
 repo = 'ternjs/tern_for_vim'
-on_ft = ['javascript', 'javascript.jsx','typescript']
+on_ft = ['javascript', 'javascriptreact', 'javascript.jsx'  'javascript.tsx','typescript']
 
 [[plugins]]
 repo = 'othree/yajs.vim'
+on_ft = ['javascript', 'javascriptreact', 'javascript.jsx'  'javascript.tsx','typescript']
 
 [[plugins]]
 repo = 'leafgarland/typescript-vim'
