Add graphql syntax

--- a/vimrc/vim_extend/dein.toml
+++ b/vimrc/vim_extend/dein.toml
@@ -307,6 +307,12 @@ on_ft = ['elm']
 [[plugins]]
 repo = 'udalov/kotlin-vim'
 
+##################
+# graphql
+##################
+[[plugins]]
+repo = 'jparise/vim-graphql'
+on_ft = ['gql', 'graphql', 'Relay.QL']
 
 ##################
 # toml
