--- a/vimrc/vim_extend/dein.toml
+++ b/vimrc/vim_extend/dein.toml
@@ -89,6 +89,13 @@ repo = 'terryma/vim-expand-region'
 hook_add = '''
   vmap v <Plug>(expand_region_expand)
   vmap <C-v> <Plug>(expand_region_shrink)
+  let g:expand_region_text_objects = {
+      \ 'iw'  :0,
+      \ 'iW'  :0,
+      \ 'i"'  :1,
+      \ 'ib'  :1,
+      \ 'iB'  :1
+\  }
 '''
 
 [[plugins]]
