--- a/vimrc/vim_extend/dein.toml
+++ b/vimrc/vim_extend/dein.toml
@@ -140,6 +140,7 @@ hook_add = '''
 [[plugins]]
 repo = 'thinca/vim-quickrun'
 hook_add = '''
+  nnoremap <Leader>q :QuickRun<CR>
 '''
 
 [[plugins]]
