--- a/vimrc/vim_extend/dein.toml
+++ b/vimrc/vim_extend/dein.toml
@@ -79,6 +79,7 @@ repo = 'ctrlpvim/ctrlp.vim'
 hook_add = '''
   let g:ctrlp_map = ''
   nmap <Leader>p :CtrlP<CR>
+  nmap <Leader>P :CtrlPClearCache<CR>
   let g:ctrlp_show_hidden = 1
   let g:ctrlp_by_filename = 1
   let g:ctrlp_user_command = ['.git', 'cd %s && git ls-files -co --exclude-standard']
