--- a/vimrc/vim_extend/dein.toml
+++ b/vimrc/vim_extend/dein.toml
@@ -61,6 +61,19 @@ repo = 'Xuyuanp/nerdtree-git-plugin'
 # enhance keybind, mapping
 ##################
 [[plugins]]
+repo = 'Shougo/unite.vim'
+hook_add = '''
+  let g:unite_enable_start_insert=1
+  let g:unite_source_history_yank_enable =1
+  let g:unite_source_file_mru_limit = 200
+  nnoremap <silent> ,uy :<C-u>Unite history/yank<CR>
+  nnoremap <silent> ,ub :<C-u>Unite buffer<CR>
+  nnoremap <silent> ,uf :<C-u>UniteWithBufferDir -buffer-name=files file<CR>
+  nnoremap <silent> ,ur :<C-u>Unite -buffer-name=register register<CR>
+  nnoremap <silent> ,uu :<C-u>Unite file_mru buffer<CR>
+'''
+
+[[plugins]]
 repo = 'tomtom/tcomment_vim'
 
 [[plugins]]
@@ -214,6 +227,8 @@ hook_add = '''
   if has('conceal')
     set conceallevel=2 concealcursor=niv
   endif
+
+"  g:neosnippet#disable_runtime_snippets
 '''
 
 [[plugins]]
