--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -1,35 +1,59 @@
 #!/usr/bin/env sh
 
 # global settings
+# コマンドでwindowを変えたときに、自動的にマウスがwindowに乗る
 yabai -m config mouse_follows_focus          on
+# オンマウスすると、自動でwindowが有効羽化される
 yabai -m config focus_follows_mouse          autoraise
+# 新規windowは右側に
 yabai -m config window_placement             second_child
-yabai -m config window_topmost               on
+# フローティングウィンドウを常に上にする
+yabai -m config window_topmost               off
 yabai -m config window_shadow                off
+
+# apeerance
 yabai -m config window_opacity               on
 yabai -m config window_opacity_duration      0.0
 yabai -m config active_window_opacity        1.0
 yabai -m config normal_window_opacity        0.95
-yabai -m config window_border                on
+yabai -m config window_border                off
 yabai -m config window_border_width          6
 yabai -m config active_window_border_color   0xff775759
 yabai -m config normal_window_border_color   0xff555555
 yabai -m config insert_feedback_color        0xaad75f5f
+# 自動的にwindowがバランスをとる
+yabai -m config auto_balance                 off
 yabai -m config split_ratio                  0.50
-yabai -m config auto_balance                 on
+# fnを押しつづけると、windowへのfocusがキープされる
 yabai -m config mouse_modifier               fn
 yabai -m config mouse_action1                move
 yabai -m config mouse_action2                resize
 
 # general space settings
-yabai -m config layout                       bsp
-yabai -m config top_padding                  12
-yabai -m config bottom_padding               12
-yabai -m config left_padding                 12
-yabai -m config right_padding                12
+yabai -m config top_padding                  00
+yabai -m config bottom_padding               00
+yabai -m config left_padding                 00
+yabai -m config right_padding                00
 yabai -m config window_gap                   06
 
 # restore position of floating windows when they are manually unfloated
 # ~/Scripts/yabai_restore.sh
+
+# space setting
+# TODO: 新しくruleに伴って、spaceを作る
+# TODO: LINEはwindow floatする
+yabai -m rule --add app="^TickTick$" space=1
+yabai -m rule --add app="^Obsidian$" space=2
+yabai -m rule --add app="^Google\ Chrome|Firefox|Safari|Arc$" space=3
+yabai -m rule --add app="^System Settings|System\ Settings|System Preferences|Finder$" space=4
+yabai -m rule --add app="^iTerm2|Warp$" space=5
+yabai -m rule --add app="^Slack$" space=6
+yabai -m rule --add app="^Slack$" space=7
+
+yabai -m config layout                       bsp
+# ticktickだけfloatにする
+yabai -m config --space 1 layout      float
+# arcも
+yabai -m config --space 3 layout      float
 
 echo "yabai configuration loaded.."
