--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/bashrc/.bashrc.cd-specific.bashrc
+/bashrc/.bashrc.local.bashrc
 /bashrc/.bashrc.export.bashrc
 
 # dict
@@ -9,3 +9,5 @@ fish/fish_variables
 fish/local.fish
 
 vimrc/color-scheme.vimrc
+
+.credential
